@@ -116,19 +116,19 @@ void realft(std::vector<double> &data, const int isign)
 
 
 
-void FastLaplaceConvolution(const vector<double> &data1original, 
-														const vector<double> &data2original, 
+void FastLaplaceConvolution(const vector<double> &data1original,
+														const vector<double> &data2original,
 														vector<double> &convolution)
 { /* this routine takes as input three identically sized vectors, data1, data2, and convolution.
 	It takes the FFT of data1 & data2, multiplies them in the frequency domain, and performs an inverse
 	FFT of their product to the time domain.  the time convolution is returned in the convolution
-	input vector.  note: the zero padding calculated at the beginning of this function ensures that the 
+	input vector.  note: the zero padding calculated at the beginning of this function ensures that the
 	convolution returned is a Laplace type convolution, i.e.:
 	k=t
 	-----
 	\
-	(data1*data2)(t)=   )   data1(t-k) x data2(k)dt   
-	/          
+	(data1*data2)(t)=   )   data1(t-k) x data2(k)dt
+	/
 	-----
 	k=0                                                                             */
 
@@ -154,7 +154,7 @@ void FastLaplaceConvolution(const vector<double> &data1original,
 	while(data2[NumberZeroElements2]==0.0) {++NumberZeroElements2;}
 
 	// if there are leading zero elements, then we can speed up the convolution by removing them,
-	// and then placing them back in after we finish the convolution 
+	// and then placing them back in after we finish the convolution
 
 	std::vector<double> dummy(arraySize,0.0);
 	if(NumberZeroElements1 > 0.0){
@@ -174,7 +174,7 @@ void FastLaplaceConvolution(const vector<double> &data1original,
 	// keep track of total Number of Zero Elements for shifting following Convolution
 	int TotalNumberLeadingZeros = NumberZeroElements1 + NumberZeroElements2;
 
-	i=0;                // calculate how many elements (2^i) and how much zero padding (2*(2^i) - arraySize)  
+	i=0;                // calculate how many elements (2^i) and how much zero padding (2*(2^i) - arraySize)
 	do{                 // required in the arrays that are to be transformed & convolved
 		idx = static_cast<int>(pow(2.0,double(i)));
 		++i;
@@ -195,21 +195,21 @@ void FastLaplaceConvolution(const vector<double> &data1original,
 
 	no2 = n/2;                        // normalization for inverse FFT
 
-  for(i=2;i<n;i+=2){                // perform convolution by multiplying the FFTS in the frequency domain 
+  for(i=2;i<n;i+=2){                // perform convolution by multiplying the FFTS in the frequency domain
     tmp=ans[i];
     ans[i]=(ans[i]*temp[i]-ans[i+1]*temp[i+1])/no2;
     ans[i+1]=(ans[i+1]*temp[i]+tmp*temp[i+1])/no2;
   }
   ans[0]=ans[0]*temp[0]/no2;
   ans[1]=ans[1]*temp[1]/no2;
-  
+
 	realft(ans, -1);                   // inverse FFT back to the time/energy domain
 
 	int chk(20),replace(0);    // chk specifies how many values are required to demonstrate that
-	int ctr(0);                // the FFT convolution gives results within 1% of the slow convolution  
-	std::vector<double> conv_value(chk,0.0),initial_value(chk,0.0); 
+	int ctr(0);                // the FFT convolution gives results within 1% of the slow convolution
+	std::vector<double> conv_value(chk,0.0),initial_value(chk,0.0);
 
-	do{                                        // replace those values in the convolution vector that are 
+	do{                                        // replace those values in the convolution vector that are
 		ctr = 0;                                 // unreliable because of precision issues - especially significant
 		for(int jj(0); jj<chk; ++jj){            // for convolution of data sets including very small values, e.g.,
 			conv_value[jj] = 0;                    // convolution of tunneling probabilities with TS Sum of States
@@ -219,7 +219,7 @@ void FastLaplaceConvolution(const vector<double> &data1original,
 			ans[replace] = conv_value[jj];
 			if(conv_value[jj]/initial_value[jj]<1.01 && conv_value[jj]/initial_value[jj]>0.99 || initial_value[jj]==0)
 				ctr += 1;                            // increment ctr by one if the convergence criteria are specified
-			++replace;                                
+			++replace;
 		}
 	}while(ctr!=chk);
 
@@ -270,14 +270,17 @@ bool convertToFourierCoefficients(const size_t expansion, vector<double>& ak, ve
 }
 
 double getEnergyFromFourierCoefficients(double theta, const vector<double> ak, const vector<double> bk, const double a0){
-  size_t expansion = bk.size();
+  size_t expansionak = ak.size();
+  size_t expansionbk = bk.size();
   double returnValue = a0;
-  for(size_t k(0); k < expansion; k++) {
-    returnValue += (ak[k] * cos((double(k)+1.0) * theta) + bk[k] * sin((double(k)+1.0) * theta));
+  for(size_t k(0); k < expansionak; ++k) {
+    returnValue += ak[k] * cos((double(k)+1.0) * theta);
+  }
+  for(size_t k(0); k < expansionbk; ++k) {
+    returnValue += bk[k] * sin((double(k)+1.0) * theta);
   }
   return returnValue;
 }
-
 
 void airy(double x, double& ai, double& aip, double& bi, double& bip)
 
