@@ -1,4 +1,6 @@
+2010-July-17 Chi-Hsiu Liang
 
+  * Some modifications to QMHinderedRotorPotential and related files.
 
 2010-July-11 Struan Robertson
 
